syntax = "proto3";

package holos.console.v1;

option go_package = "github.com/holos-run/holos-console/gen/holos/console/v1;consolev1";

// Role represents the primitive roles for RBAC.
enum Role {
  // ROLE_UNSPECIFIED indicates no role was specified.
  ROLE_UNSPECIFIED = 0;
  // ROLE_VIEWER can read and list resources.
  ROLE_VIEWER = 1;
  // ROLE_EDITOR can read, list, and write resources.
  ROLE_EDITOR = 2;
  // ROLE_OWNER has full access including delete and admin operations.
  ROLE_OWNER = 3;
}

// Permission represents granular permissions for secrets operations.
enum Permission {
  // PERMISSION_UNSPECIFIED indicates no permission was specified.
  PERMISSION_UNSPECIFIED = 0;
  // PERMISSION_SECRETS_READ allows reading secret data.
  PERMISSION_SECRETS_READ = 1;
  // PERMISSION_SECRETS_LIST allows listing secrets.
  PERMISSION_SECRETS_LIST = 2;
  // PERMISSION_SECRETS_WRITE allows creating and updating secrets.
  PERMISSION_SECRETS_WRITE = 3;
  // PERMISSION_SECRETS_DELETE allows deleting secrets.
  PERMISSION_SECRETS_DELETE = 4;
  // PERMISSION_SECRETS_ADMIN allows administrative operations on secrets.
  PERMISSION_SECRETS_ADMIN = 5;
}
