syntax = "proto3";

package holos.console.v1;

option go_package = "github.com/holos-run/holos-console/gen/holos/console/v1;consolev1";

// SecretsService provides access to Kubernetes secrets with RBAC.
service SecretsService {
  // GetSecret retrieves a secret by name from the current namespace.
  // Requires authentication via Authorization: Bearer <id_token> header.
  // Returns PermissionDenied if user is not in the secret's allowed-groups.
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}

// GetSecretRequest contains the name of the secret to retrieve.
message GetSecretRequest {
  // name is the name of the secret to retrieve.
  string name = 1;
}

// GetSecretResponse contains the secret data.
message GetSecretResponse {
  // data contains the secret key-value pairs.
  // Values are the raw secret bytes (not base64 encoded).
  map<string, bytes> data = 1;
}
